# python-learning

./: .gitignore  .pre-commit-config.yaml  .zshrc备份  pyproject.toml
src/python_learning/: hello.py
tests/: test_hello.py
