[project]
name = "python-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "hw562552238-byte",email = "hw562552238@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "python_learning", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
mypy = "^1.17.0"
ipython = "^9.4.0"
notebook = "^7.4.4"
pre-commit = "^4.2.0"

[tool.isort]
profile = "black"  # 让 isort 格式兼容 black，防止冲突

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
